--- a/MultiShopAPI/appsettings.json
+++ b/MultiShopAPI/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "TokenOptions": {
+        "Audience": "Elmir",
+        "Issuer": "ElmirMikayilli",
+        "AccessTokenExpiration": 60,
+        "SecurityKey": "FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey FinalProjectSecurityKey"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
